compsocsite/static/css/mobile.css
body {
	min-height: 1000px;
	padding-top: 30px;
	padding-bottom: 20px;
	margin-left: 0;
	margin-right: 0;
	padding-left: 5px;
	padding-right: 5px;
	font-size: 200%;
}

img.item {
	height: 40px;
	width:auto;
	max-width:100%;
	
}

img.item:hover {
	height: 40px;
	width:auto;
	max-width:100%;
}

input[type=text], input[type=url], input[type=email], input[type=password], input[type=tel] {
	-webkit-appearance: none;
	-moz-appearance: none;
	display: block;
	margin: 0;
	width: 100%;
	height: 60px;
	line-height: 50px;
	font-size: 40px;
	border: 1px solid #bbb;
}

li.li_item{
	font-size: 50%;
}

input[type=checkbox] {
	width: 44px;
	height: 44px;
	-webkit-border-radius: 22px;
	-moz-border-radius: 22px;
	border-radius: 22px;
	border: 1px solid #bbb;
}

button {
	margin: 0;
	-webkit-appearance: none;
	-moz-appearance: none;
	display: block;
	margin-top: 15px;
	margin-bottom: 15px;
	font-size: 1em;
	line-height: 2.5em;
	color: #333;
	font-weight: bold;
	height: 2em;
	width: 100%;
	border: 1px solid #bbb;
	-webkit-border-radius: 2px;
	-moz-border-radius: 2px;
	border-radius: 2px;
}

.form-control {
	margin: 0;
	width: 100%;
	height: 60px;
	line-height: 50px;
	font-size: 40px;
	border: 1px solid #bbb;
}

.btn-primary {
	font-size: 60%;
}

.btn-default {
	font-size: 60% !important;
}

ul.empty {
    background-color:lightgrey;
    height: 15px;
}

